WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246132
[Live Range Selection] Debug assertion failure in FrameSelection::setSelectionWithoutUpdatingAppearance
https://bugs.webkit.org/show_bug.cgi?id=246132
Summary
[Live Range Selection] Debug assertion failure in FrameSelection::setSelectio...
Ryosuke Niwa
Reported
2022-10-05 20:00:32 PDT
When live range selection is enabled, we hit the following assertion in 5 editing tests: SHOULD NEVER BE REACHED editing/FrameSelection.cpp(374) : bool WebCore::FrameSelection::setSelectionWithoutUpdatingAppearance(const WebCore::VisibleSelection &, OptionSet<WebCore::FrameSelection::SetSelectionOption>, WebCore::FrameSelection::CursorAlignOnScroll, WebCore::TextGranularity) 1 0x7b4271bf9 WTFCrash 2 0x7c98ba52b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x7cd1c7f31 WebCore::FrameSelection::setSelectionWithoutUpdatingAppearance(WebCore::VisibleSelection const&, WTF::OptionSet<WebCore::FrameSelection::SetSelectionOption>, WebCore::FrameSelection::CursorAlignOnScroll, WebCore::TextGranularity)
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-10-05 20:07:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5066
Radar WebKit Bug Importer
Comment 2
2022-10-05 20:08:55 PDT
<
rdar://problem/100835162
>
EWS
Comment 3
2022-10-06 10:16:45 PDT
Committed
255226@main
(96703ac122d0): <
https://commits.webkit.org/255226@main
> Reviewed commits have been landed. Closing PR #5066 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug